Add GPU support

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -117,7 +117,7 @@
     "n_classes = np.unique(train['labels']).shape[0]\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
-    "print(\"Number of training examples =\", n_validation)\n",
+    "print(\"Number of validation examples =\", n_validation)\n",
     "print(\"Number of testing examples =\", n_test)\n",
     "print(\"Image data shape =\", image_shape)\n",
     "print(\"Number of classes =\", n_classes)"
