--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -500,6 +500,18 @@
       "Loss = 0.06708691269159317\n",
       "Training Accuracy = 0.988\n",
       "Validation Accuracy = 0.940\n",
+      "\n",
+      "EPOCH 2 (1088 iterations)...\n",
+      "Learning rate: 9.0e-04\n",
+      "Loss = 0.02799523063004017\n",
+      "Training Accuracy = 0.995\n",
+      "Validation Accuracy = 0.951\n",
+      "\n",
+      "EPOCH 3 (1632 iterations)...\n",
+      "Learning rate: 8.1e-04\n",
+      "Loss = 0.00385683705098927\n",
+      "Training Accuracy = 0.998\n",
+      "Validation Accuracy = 0.958\n",
       "\n"
      ]
     }
