Correct writeup.md

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -512,6 +512,24 @@
       "Loss = 0.00385683705098927\n",
       "Training Accuracy = 0.998\n",
       "Validation Accuracy = 0.958\n",
+      "\n",
+      "EPOCH 4 (2176 iterations)...\n",
+      "Learning rate: 7.3e-04\n",
+      "Loss = 0.026769736781716347\n",
+      "Training Accuracy = 0.998\n",
+      "Validation Accuracy = 0.957\n",
+      "\n",
+      "EPOCH 5 (2720 iterations)...\n",
+      "Learning rate: 6.6e-04\n",
+      "Loss = 0.003230796195566654\n",
+      "Training Accuracy = 0.999\n",
+      "Validation Accuracy = 0.958\n",
+      "\n",
+      "EPOCH 6 (3264 iterations)...\n",
+      "Learning rate: 5.9e-04\n",
+      "Loss = 0.004985188599675894\n",
+      "Training Accuracy = 0.999\n",
+      "Validation Accuracy = 0.951\n",
       "\n"
      ]
     }
